# mumfim

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  LICENSE  README.md
dep/scorecutil/: CMakeLists.txt  moduletemplate
dep/scorecutil/calculus/: BezierMapping.cc  BezierMappingBuilder.cc  GaussLegendre1D.cc  GaussLegendreSimplex.cc  GaussQuadrature.cc  GaussQuadratureHex.cc  GaussQuadraturePrism.cc  GaussQuadraturePyramid.cc  GaussQuadratureQuad.cc  GaussQuadratureTet.cc  GaussQuadratureTri.cc  Integrator.cc  LagrangeMapping.cc  LagrangeMappingBuilder.cc  Mapping.cc
dep/scorecutil/include/: BezierMapping.h  BezierMappingBuilder.h  CountTime.h  GaussIntegrator.h  GaussLegendreSimplex.h  GaussQuadrature.h  IntPt.h  Integrator.h  LagrangeMapping.h  LagrangeMappingBuilder.h  MSMapping.h  Mapping.h  MappingBuilder.h  Octree.h  OctreeCreate2.h  Tensor.h  TensorIO.h  VolumeBuckets.h  affine_space.h  mPoint.h  mTensor2.h  mTensor2Symmetric.h  mTensor4.h  mVector.h  o_internals.h  scorecMD_memory.h  scorecSC_mem.h  scorecSListBase.h  scorecSSList.h  scorec_function_objects.h
dep/scorecutil/octree/: OctreeSrc.cc  o_internals.cc
dep/scorecutil/scripts/: configscorecutil.sh
dep/scorecutil/unittest/: Makefile  VolumeBuckets_unittest.cpp  affine_space_unittest.cpp  mTensor2_unittest.cpp  mVector_unittest.cpp  nested_iterator_unittest.cpp  simmetrix_iterator_adaptor_unittest.cpp  volume_brick_map_unittest.cpp
dep/scorecutil/util/: scorecMD_memory.cc  scorecSC_mem.cc  scorecSListBase.cc
dep/sparskit/: CMakeLists.txt  moduletemplate
dep/sparskit/dep/: CMakeLists.txt  moduletemplate
dep/sparskit/scripts/: configsparskit.sh
dep/sparskit/src/: CSR_Matrix.cc  CSR_Matrix.h  CSR_SPARSKIT_Solver.cc  CSR_Vector.h  SparskitLinearSystemSolver.cc  SparskitLinearSystemSolver.h  listman.cc  listman.h
doc/: pod.txt  (+2 more)
macro/src/: CMakeLists.txt  bioAnalysis.cc  bioAnalysis.h  bioAnalysisIO.h  bioAnalysisIO_impl.h  bioAnalysis_impl.h  bioBatheMultiscale.h  bioConstraint.h  bioHolmesMowIntegrator.h  bioLinearTissue.cc  bioLinearTissue.h  bioModelTraits.cc  bioModelTraits.h  bioMultiscaleIntegrator.h  bioMultiscaleTissue.cc  bioMultiscaleTissue.h  bioMultiscaleTissue_impl.h  bioNeoHookeanIntegrator.h  bioNeoHookeanIntegratorFAD.h  bioNonlinearTissue.cc  bioNonlinearTissue.h  bioOldMultiscaleIntegrator.h  bioPreserveVolConstraintIntegrator.h  bioRVECoupling.cc  bioRVECoupling.h  bioReadStochasticField.cc  bioReadStochasticField.h  bioStiffnessVariation.cc  bioStiffnessVariation.h  bioStiffnessVariation_impl.h  bioTissueAnalysis.cc  bioTissueAnalysis.h  bioTissueAnalysis_impl.h  bioTissueMultiscaleAnalysis.cc  bioTissueMultiscaleAnalysis.h  bioTrnsIsoNeoHookeanIntegrator.h  bioULMultiscaleHydrostaticPressureIntegrator.h  bioULMultiscaleIntegrator.h  bioVariableRecovery.cc  bioVariableRecovery.h  (+8 more)
macro/test/multiscale/: CMakeLists.txt  main.cc
macro/test/singlescale/: CMakeLists.txt  main.cc
micro/src/: Analysis.h  CMakeLists.txt  ElementalSystem.h  FiberNetwork.h  FiberNetworkIO.cc  FiberNetworkIO.h  MacroCoupling.h  RVE.cc  RVE.h  TrussIntegrator.h  Util.h  apfUtil.cc  apfUtil.h
micro/test/fiber_network/: CMakeLists.txt  converter.cc  converter.cc~  load.cc
micro_fm/src/: CMakeLists.txt  MicroFMMultiscaleTypes.h  NonLinFibMtx.cc  NonLinFibMtx.h  OutPutFibMtx.cc  averagedStressFromFiber.cc  averagedStressFromMatrix.cc
micro_fm/test/main/: CMakeLists.txt  CompileCMake.sh  PetscOpt  main.cc
micro_fo/dep/: CMakeLists.txt
micro_fo/dep/scripts/: Compile.sh  config.sh
micro_fo/dep/src/: blas1.f  utils.f
micro_fo/src/: #create_element_new.cc#  #main_solver_psi.cc#  #temp#  .#temp  AlignFiberNetwork.cc  Analysis.cc  Analysis.h  CMakeLists.txt  CSR.cc  CSR.h  CSRBuilder.cc  ElementalSystem.h  FiberNetwork.cc  FiberNetwork.h  FiberNetworkIO.cc  FiberNetworkIO.h  FiberNetwork_impl.h  FiberRVE.cc  FiberRVE.h  FiberReactions.cc  FiberReactions.h  InitGuess.h  LinearSystem.h  MacroCoupling.cc  MacroCoupling.h  MacroMesh.h  MicroFOMultiscaleTypes.h  MicroFOUtil.h  RVE.cc  RVE.h  RVE_Util.cc  RVE_Util.h  RepresentVolElem.cc  RepresentVolElem.h  Solver.h  SparseMatrix.cc  SparseMatrix.h  SparseStructure.cc  SparseStructure.h  SparskitLinearSystem.cc  (+110 more)
micro_fo/src/batched_analysis/: bioBatchedComputeOrientationTensor.h  bioBatchedMesh.h  (+4 more)
micro_fo/test/: #serialization.cc#  CMakeLists.txt  Run.sh  Run_Isolated.sh  Run_Multi.sh  Run_singleDOF.sh  batched_fiber_only.cc  compute_global_truss.py  csr.cc  fiber_only.cc  fiber_only.yaml  fiber_only_idea.cc  interp_onto.cc  isolated_dof.cc  isolated_dof.cc~  main.cc  multi_disp.cc  read_abaqus_mtx.py  serialization.cc  serialization.cc~  sigma11.ps  singleDOF_disp.cc  single_load_balance.cc  single_load_balance.cc~  testRVE.cc  test_elemental_stiffness.cc  test_global_stiffness.cc  test_kokkos_view_of_views.cc  test_main.cc  test_mass_integrator.cc  test_reorder_mesh.cc  test_stiffness.cc
src/: CMakeLists.txt  adios_fiber_only.cc  batched_fiber_only.cc  fiber_only.cc  multiscale_analysis.cc  singlescale_analysis.cc
src/macroscale/: CMakeLists.txt  bioAttributes.h  bioHolmesMowIntegrator.h  bioLinearTissue.h  bioMultiscaleConvergence.h  bioMultiscaleIntegrator.h  bioMultiscaleTissue_impl.h  bioRVECoupling.h  bioReadStochasticField.cc  bioTissueMultiscaleAnalysis.cc  bioTissueMultiscaleAnalysis.h  bioVariableRecovery_impl.h  bioVolumeConstraint_impl.h
src/microscale/: bioApfPointers.h  bioExplicitOutputWriter.h  bioFiber.cc  bioFiber.h  bioFiberNetworkIO_impl.h  bioFiberNetworkLibrary.h  bioFiberRVEAnalysis.h  bioFiberRVEAnalysisExplicit.h  bioFiberRVEAnalysisExplicit_impl.h  bioMicroFOParams.cc  bioMicroFOParams.h  bioMultiscaleCoupling.h  bioNeoHookeanRVEAnalysis.cc  bioNeoHookeanRVEAnalysis.h  bioRVE.cc  bioTrussIntegrator.cc
src/mumfim/: exceptions.h
test/macroscale/: ApfMatrixUtils.cc  CMakeLists.txt  NeohookeanMaterial.cc  TestDeformations.cc  TestDeformations.h  TestSupport.cc  TestSupport.h  TorchMaterial.cc  UpdatedLagrangianMaterialIntegrator.cc  test_macro_main.cc
(+534 files in other folders)
